--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		/>
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1.0"
+			content="initial-scale=1, width=device-width"
 		/>
 		<title>Vite App</title>
 	</head>
