--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			name="viewport"
 			content="initial-scale=1, width=device-width"
 		/>
-		<title>Vite App</title>
+		<title>مهراسان</title>
 	</head>
 	<body>
 		<div id="root"></div>
