--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/src/favicon.svg"
+			href="/src/assets/images/logo.png"
 		/>
 		<meta
 			name="viewport"
